assets/css/style.css
/* ... */
/* ────────────────────────────────────────────────────────────────────────── */
/* ████████████████████████ 🖥️ LAYOUT SYSTEM  ██████████████████████████████ */
/* ────────────────────────────────────────────────────────────────────────── */
/* Classes que servem apenas para layout */

/* ─── PAGE WRAPPER ───────────────────────────────────────────────────────────────────────────────────────── ✣ ─ */
.container{
	/* Layout */
  margin: 0 auto;
	/* Sizing */
  padding: 0 var(--spacing10);
  max-width: 1200px;
  box-sizing: border-box;
  /* Effects */
	transition: filter 0.3s ease; /*Acontece ao sofrer blur do hamburger menu*/
}


/* ───  Seção ──────────────────────────────────────────────────────── ✣ ─ */
.section{
	margin-top: var(--spacing8);
}


/* ─── FLEX GERAL ───────────────────────────────────────────────────────────────────────────────────────── ✣ ─ */
.flex{
	display: flex;
	align-items: center;
	justify-content: center;
	gap: var(--spacing4);
	flex-wrap: wrap;
}


/* ─── GLOBAL LIST STYLES ─────────────────────────────────────────────────────────────────────────────────── ✣ ─ */
nav ul{
	/* Layout */
	display: flex;
	flex-direction: row; /*Container pai: linha ou coluna*/
	justify-content: flex-end; /*Children horizontal distribuition if flex is row*/
	align-items: center; /*Children vertical distribuition if flex is row*/
	gap: var(--spacing4); /*Margin entre itens*/
	/* Visuals */
	list-style: none;
}

footer section ul{
	/* Layout */
	display: flex;
	flex-direction: row; /*Container pai: linha ou coluna*/
	justify-content: flex-end; /*Children horizontal distribuition if flex is row*/
	align-items: center; /*Children vertical distribuition if flex is row*/
	gap: 5%; /*Margin entre itens*/
	/* Visuals */
	list-style: none;
}



/* ────────────────────────────────────────────────────────────────────────── */
/* ███████████████████████████  🧩COMPONENTS  ███████████████████████████████ */
/* ────────────────────────────────────────────────────────────────────────── */

/* ───  BUTTON ──────────────────────────────────────────────────────── ✣ ─ */
.btn{
	/* Layout */
	white-space: nowrap;
  display: inline-flex;
  justify-content: center;
  align-items: center;
	/* Visuals */
  border-radius: var(--spacing2);
  box-shadow: var(--shadow);
	/* Effects */
  transition:
    transform 0.15s ease,
    box-shadow 0.15s ease,
    background-color 0.2s ease,
    color 0.2s ease;
}

.btn:hover{
	/* Visuals */
	background-color: var(--color-accent1-hover);
	box-shadow: var(--shadow-hover);
	border-color: var(--color-accent1);
	/* Effects */
	transform: translateY(-2px);
}

.btn:active {
	/* Visuals */
	box-shadow: var(--shadow-active);
	/* Effects */
	transform: translateY(0);
}

/* ───  BUTTON PRIMARY ──────────────────────────────────────────────────────── ✣ ─ */
.btn--primary{
	/* Sizing */
	padding: var(--spacing3) var(--spacing3); /* vertical | horizontal */
	min-height: var(--spacing6);
	/* Typograph */
	font-size: var(--spacing4);
	/* Visuals */
	background-color: var(--color-accent1); /*CTA Color*/
}


/* ───  BUTTON PRIMARY BIG ──────────────────────────────────────────────────────── ✣ ─ */
.btn--primary-big{
	/* Sizing */
	padding: var(--spacing3) var(--spacing5); /* vertical | horizontal */
	min-height: var(--spacing7);
	/* Typograph */
	font-size: var(--spacing5);
	/* Visuals */
	background-color: var(--color-accent1); /*CTA Color*/
}


/* ───  BUTTON SECUNDARY ──────────────────────────────────────────────────────── ✣ ─ */
.btn--secondary{
	/* Sizing */
	padding: var(--spacing3) var(--spacing3); /* vertical | horizontal */
	min-height: var(--spacing6);
	/* Typograph */
	font-size: var(--spacing4);
	/* Visuals */
	background-color: rgba(0, 0, 0, 0.00); /* Transparent Color */
	color: var(--color-text-primary);
	border: var(--border);
}

.btn--secondary:hover{
	/* Visuals */
	background-color: var(--color-bg-dark); /* Transparent Secundary Color */
	color: var(--color-accent1);
}


/* ─── Dividers ──────────────────────────────────────────────────────── ✣ ─ */
.divider-horizontal100{
	width: 100%;
	height: 1px;
	margin: var(--spacing0) var(--spacing1); /* vertical | horizontal */
	background-color: var(--color-border-muted);
}

.divider-horizontal90{
	width: 90%;
	height: 1px;
	margin: var(--spacing0) var(--spacing1); /* vertical | horizontal */
	background-color: var(--color-border-muted);
}

.pill-divider {
    width: 1px;
    height: var(--spacing45); /* 20px */
    background-color: var(--color-border-muted);
    margin: 0 2px;
}


/* ─── Icons ─────────────────────────────────────────────────────────────────────────────────────────── ✣ ─ */
.svgicon-small{
	/*Size 32px*/
	width: var(--spacing6);
	height: var(--spacing6);
	color: var(--color-text-primary-muted);
}

.svgicon-xsmall{
	/*Size 24px*/
	width: var(--spacing5);
	height: var(--spacing5);
	color: var(--color-text-primary-muted);
}

.btn .svgicon-small path,
.btn .svgicon-xsmall path{
	color: var(--color-text-primary);
}


/* ─── CARDS ─────────────────────────────────────────────────────────────────────────────────────────── ✣ ─ */
.card{
	/* Visuals */
  background-color: var(--color-bg);
  border: var(--border);
  border-radius: var(--spacing4);
	border-top: solid 1px var(--color-highlight);
	box-shadow: var(--shadow);
	/* Effects */
  transition: transform 0.25s ease, box-shadow 0.25s ease, border-color 0.25s ease;
}

.card:hover{
	/* Visuals */
  border-color: var(--color-accent1);
	box-shadow: var(--shadow-hover);
	transform: translateY(-4px);
}

.card--emote{
	/* Layout */
	display: flex;
	justify-content: center;
	flex-direction: row;
	align-items: center;
	text-align: left;
	gap: var(--spacing4); /* Margin entre texto e imagem */
	/* Sizing */
	padding: var(--spacing2) var(--spacing0) var(--spacing2) var(--spacing3);
	min-height: var(--spacing6);
	width: 30%;
}
/* ... */

